# fastapi-lifespan-manager

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
fastapi_lifespan_manager/: __init__.py  lifespan_manager.py  types.py
tests/: conftest.py  test_lifespan_manager.py  test_mypy.py
